# Mytalk

./: .gitignore  pyproject.toml  synthesize_gaussian_fuse.py  train_gaussian_face.py  train_gaussian_fuse.py  train_gaussian_mouth.py
data_utils/: process_optimized.py
data_utils/SegFace/: INTEGRATION_GUIDE.md  README.md  USAGE_GUIDE.md  batch_process.py  config.py  dataloader.py  download_model.py  environment.yml  inference.py  test.py  test_single_image.py  train.py  visualize.py
data_utils/SegFace/datasets/: celebamask_hq.py  helen.py  lapa.py
data_utils/SegFace/docs/: index.html
data_utils/SegFace/loss/: dice_loss.py  focal_loss.py  weighted_ce.py
data_utils/SegFace/network/: __init__.py
data_utils/SegFace/network/models/: __init__.py  segface_celeb.py  segface_helen.py  segface_lapa.py
data_utils/SegFace/scripts/: test.sh  train_celeb.sh  train_helen.sh  train_lapa.sh
data_utils/face_parsing/: segface_wrapper.py
data_utils/face_tracking/: face_tracker.py
gaussian_splat/: README.md  __init__.py  cameras.py  config.py  gaussian_model.py  motion_net.py  provider.py  renderer.py  rich_utils.py  synthesize_fuse.py  train_face.py  train_fuse.py  train_mouth.py  train_utils.py
gaussian_splat/utils/: __init__.py  camera_utils.py  general_utils.py
shencoder/: backend.py
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
submodules/simple-knn/: setup.py  simple_knn.cu
